crates/telemetry-adapters/tests/snapshots/snapshots_f1_family__f1_race_snapshot.snap
---
source: crates/telemetry-adapters/tests/snapshots_f1_family.rs
assertion_line: 60
expression: normalized
---
speed_ms: 72
steering_angle: 0
throttle: 0
brake: 0
clutch: 0
rpm: 7161.972
max_rpm: 0
gear: 7
num_gears: 0
lateral_g: 0
longitudinal_g: 0
vertical_g: 0
slip_ratio: 0.020833334
slip_angle_fl: 0
slip_angle_fr: 0
slip_angle_rl: 0
slip_angle_rr: 0
tire_temps_c:
  - 0
  - 0
  - 0
  - 0
tire_pressures_psi:
  - 0
  - 0
  - 0
  - 0
ffb_scalar: 0
ffb_torque_nm: 0
flags:
  yellow_flag: false
  red_flag: false
  blue_flag: false
  checkered_flag: false
  green_flag: true
  pit_limiter: false
  in_pits: false
  drs_available: false
  drs_active: false
  ers_available: false
  ers_active: false
  launch_control: false
  traction_control: false
  abs_active: false
  engine_limiter: false
  safety_car: false
  formation_lap: false
  session_paused: false
position: 0
lap: 0
current_lap_time_s: 0
best_lap_time_s: 0
last_lap_time_s: 0
delta_ahead_s: 0
delta_behind_s: 0
fuel_percent: 0
engine_temp_c: 0
extended:
  brakeinput:
    type: Float
    value: 0.05
  clutchinput:
    type: Float
    value: 0
  decoder_type:
    type: String
    value: f1_codemasters_udp_bridge
  drs_active:
    type: Boolean
    value: false
  drs_available:
    type: Boolean
    value: false
  enginerate:
    type: Float
    value: 750
  ers_available:
    type: Boolean
    value: false
  gear:
    type: Float
    value: 7
  lataccel:
    type: Float
    value: -1.2
  longaccel:
    type: Float
    value: 0.8
  speed:
    type: Float
    value: 72
  steeringinput:
    type: Float
    value: -0.08
  suspensionpositionfl:
    type: Float
    value: 0.04
  suspensionpositionfr:
    type: Float
    value: 0.035
  suspensionpositionrl:
    type: Float
    value: 0.05
  suspensionpositionrr:
    type: Float
    value: 0.045
  suspensionvelocityfl:
    type: Float
    value: 0.02
  suspensionvelocityfr:
    type: Float
    value: -0.01
  suspensionvelocityrl:
    type: Float
    value: 0.03
  suspensionvelocityrr:
    type: Float
    value: 0.01
  throttleinput:
    type: Float
    value: 0.92
  vertaccel:
    type: Float
    value: 0.1
  wheelpatchspeedfl:
    type: Float
    value: 71.5
  wheelpatchspeedfr:
    type: Float
    value: 72
  wheelpatchspeedrl:
    type: Float
    value: 73.5
  wheelpatchspeedrr:
    type: Float
    value: 73
sequence: 0
